<resources>
    <string name="app_name">PutNav</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_preferences">PreferencesActivity</string>
    <string name="disabled_person">Unikaj schodów</string>
    <string name="abort">Anuluj</string>
    <string name="save">Zapisz</string>
    <string name="polish">Polski</string>
    <string name="english">English</string>
    <string name="title_activity_campus">CampusActivity</string>
    <string name="title_activity_authors">AuthorsActivity</string>
    <string name="title_activity_tips">TipsActivity</string>
    <string name="title_activity_about_building">aboutBuildingActivity</string>
    <string name="current_path">Obecna trasa:</string>
    <string name="legend">Legenda</string>
    <string name="instructions">Instrukcje</string>
    <string name="functions">Funkcjonalność</string>
    <string name="legend_door">Wejście oraz wyjście z budynku</string>
    <string name="legend_info">Wyświetlenie informacji o budynku</string>
    <string name="legend_start">Ustawienie punktu startowego</string>
    <string name="legend_pkt_off">Oznaczenie nieczynnego punktu</string>
    <string name="legend_pkt_on">Oznaczenie punktu jako czynny</string>
    <string name="legend_search">Wyszukanie trasy</string>
    <string name="legend_switch">Zamiana punktu startowego z docelowym</string>
    <string name="legend_wc">Toaleta</string>
    <string name="legend_close_navigation">Anulowanie nawigacji</string>
    <string name="legend_previous_map">Poprzednia mapa</string>
    <string name="legend_next_map">Następna mapa</string>
    <string name="settings_language">Ustaw język</string>
    <string name="settings">Ustawienia</string>
    <string name="settings_updates">Aktualizacje</string>
</resources>
