<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_marginLeft="0dp"
    android:layout_marginStart="0dp"
    android:background="@android:color/background_light"
    android:weightSum="1">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/legend"
        android:id="@+id/textViewLegend" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TableRow
            android:layout_marginTop="2dp"
            android:gravity="center_vertical" >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:src="@drawable/drzwi" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/legend_door"
                android:id="@+id/textView" />
        </TableRow>
        <TableRow
            android:layout_marginTop="2dp"
            android:gravity="center_vertical" >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView1"
                android:src="@drawable/info"  />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/legend_info"
                android:id="@+id/textView1" />
        </TableRow>
        <TableRow
            android:layout_marginTop="2dp"
            android:gravity="center_vertical" >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView2"
                android:src="@drawable/start" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/legend_start"
                android:id="@+id/textView2" />
        </TableRow>
        <TableRow
            android:layout_marginTop="2dp"
            android:gravity="center_vertical" >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView3"
                android:src="@drawable/x" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/legend_pkt_off"
                android:id="@+id/textView3" />
        </TableRow>
        <TableRow
            android:layout_marginTop="2dp"
            android:gravity="center_vertical" >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView4"
                android:src="@drawable/ok" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/legend_pkt_on"
                android:id="@+id/textView4" />
        </TableRow>
        <TableRow
            android:layout_marginTop="2dp"
            android:gravity="center_vertical" >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView5"
                android:src="@drawable/lupa" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/legend_search"
                android:id="@+id/textView5" />
        </TableRow>
        <TableRow
            android:layout_marginTop="2dp"
            android:gravity="center_vertical" >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView6"
                android:src="@drawable/odwroc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/legend_switch"
                android:id="@+id/textView6" />
        </TableRow>
        <TableRow
            android:layout_marginTop="2dp"
            android:gravity="center_vertical" >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView7"
                android:src="@drawable/wc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/legend_wc"
                android:id="@+id/textView7" />
        </TableRow>

        <TableRow
            android:layout_marginTop="2dp"
            android:gravity="center_vertical" >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView8"
                android:src="@drawable/krzyzyk" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/legend_close_navigation"
                android:id="@+id/textView8" />
        </TableRow>
        <TableRow
            android:layout_marginTop="2dp"
            android:gravity="center_vertical" >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView9"
                android:src="@drawable/strzalka_l" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/legend_previous_map"
                android:id="@+id/textView9" />
        </TableRow>
        <TableRow
            android:layout_marginTop="2dp"
            android:gravity="center_vertical" >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView10"
                android:src="@drawable/strzalka_p" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/legend_next_map"
                android:id="@+id/textView10" />
        </TableRow>




    </TableLayout>

</LinearLayout>
